@@ -1,4 +1,4 @@
-$Id: History,v 1.27 2001-02-17 12:55:55 kurasige Exp $
+$Id: History,v 1.28 2001-03-06 09:59:14 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Mar 7, 01  H.Kurashige (track-V03-00-04) 
+- Add protection for the zero-momentum case 
+  for UpdateStepForAlongStep in ParticleChange  (J.A)
+
 Feb 17, 01  H.Kurashige (track-V03-00-03)
 - Add Velocity and Setmethod in G4StepPoint
 - Add SetVelocity in G4Step.::InitializeStep
